# mini_hackathon_alibaba

./: README.md  main.py
athena_backend/: .env.example  .gitignore  database.py  main.py  models.py  pyproject.toml
athena_frontend/: build-errors.txt  index.html  package-lock.json  package.json
athena_frontend/src/: App.tsx  index.css
athena_frontend/src/components/: AIAgentsSection.tsx  CategoriesSection.tsx  DashboardMainSection.tsx  NavigationSidebar.tsx  SettingsSection.tsx  Sidebar.tsx  TransactionSection.tsx  TransactionTable.tsx  WhitelistManager.tsx
athena_frontend/src/components/layouts/: DashboardLayout.tsx
athena_frontend/src/components/ui/: Badge.tsx  Button.tsx  Input.tsx  PageHeader.tsx  SearchInput.tsx  Select.tsx  TablePagination.tsx  Toggle.tsx
athena_frontend/src/data/: transactions.ts
athena_frontend/src/hooks/: useDashboardData.ts
athena_frontend/src/pages/: AIAgentsPage.tsx  CategoriesPage.tsx  DashboardPage.tsx  LoginPage.tsx  SettingsPage.tsx  SignUpPage.tsx  TransactionPage.tsx  WhitelistPage.tsx
athena_frontend/src/services/: api.ts
category/: cloud.txt  groceries.txt
