[project]
name = "athena-backend"
version = "0.1.0"
description = "AI Security Interceptor - FastAPI backend for validating AI agent transactions"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.134.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.47",
    "uvicorn>=0.41.0",
]
